United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7082263 Reflection::resolve_field/field_get/field_set are broken
7082263 : Reflection::resolve_field/field_get/field_set are broken

Details
Type:
Bug
Submit Date:
2011-08-23
Status:
Closed
Updated Date:
2011-11-28
Project Name:
JDK
Resolved Date:
2011-11-28
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs21
Fixed Versions:
hs22

Related Reports
Backport:
Backport:

Sub Tasks

Description
When moving the static fields out from the instanceKlasses into the mirrors, the Reflection::resolve_field, Reflection::field_get and Reflection::field_set functions were not updated accordingly. These functions still try to access the static fields with an offset from the klassOop.

Note, that these functions are only available if compiled with SUPPORT_OLD_REFLECTION.

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-14
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-main/hotspot/rev/19241ae0d839
                                     
2011-09-08
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/19241ae0d839
                                     
2011-08-30
EVALUATION

7082263: Reflection::resolve_field/field_get/field_set are broken
Reviewed-by: kvn, dholmes, stefank, coleenp

The static field mirror changes missed some dead code in reflection.
Instead of fixing it I'm deleting it.  I've deleted all the reflection
code that's dead.  I confirmed that none of these JVM_ entry points
are referenced by any JDK since 1.5.  They also aren't mentioned by
the jvm.h in the JDK.
                                     
2011-08-30
EVALUATION

We should just delete these.
                                     
2011-08-24
EVALUATION

These functions are only used by JVM_GetField, JVM_GetPrimitiveField, JVM_SetField, and JVM_SetPrimitiveField.

I couldn't find any references to these functions in the JDK6/JDK7 src code, or in libjava.so.

Maybe an opportunity to clean out some old code?
                                     
2011-08-23



Hardware and Software, Engineered to Work Together