7082263: Reflection::resolve_field/field_get/field_set are broken

Reviewed-by: kvn, dholmes, stefank, coleenp